<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mola_input_ouster</name>
  <version>0.1.0</version>
  <description>
    MOLA input module for Ouster LiDAR sensors using the native Ouster C++ SDK.
    Provides direct sensor connection and PCAP replay without ROS middleware.
  </description>

  <maintainer email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</maintainer>
  <license>GPL-3.0</license>
  <url type="website">https://github.com/MOLAorg/mola</url>
  <url type="repository">https://github.com/MOLAorg/mola</url>

  <author email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</author>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>curl</depend>

  <build_depend>eigen</build_depend>
  <build_depend>libflatbuffers-dev</build_depend> 
  <build_depend>libpng-dev</build_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>libtins-dev</build_depend>
  <build_depend>libzip-dev</build_depend>
  <build_depend>libzstd-dev</build_depend>
  
  <depend>mola_kernel</depend>
  <depend>mola_yaml</depend>
  <depend>mrpt_libmaps</depend>
  <depend>mrpt_libobs</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
